<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">MessageMe</string>
    <string name="create">Create New Account</string>

    //hints
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="name">Enter first and last name</string>
    <string name="username">Enter Username</string>
    <string name="question">Enter Security Question</string>
    <string name="answer">Enter Security Answer</string>
    <string name="message_hint">Username:Message</string>
    <string name="enter_message">enter message</string>

    //Buttons
    <string name="login">Begin Messaging</string>
    <string name="create_account">New To MessageMe?</string>
    <string name="retrieve">Retrieve Account Details</string>
    <string name="search">Find User</string>
    <string name="send">Send!</string>
    <string name="my_messages">My Messages</string>
    <string name="sent">My Sent Messages</string>
    <string name="logout">Sign Out</string>
    <string name="add">New Message Mate</string>
    <string name="refresh">Refresh</string>

    //labels that are cnsts
    <string name="forgot">Feeling Forgetful</string>
    <string name="security">Security questions are incase you forget your account details</string>
    <string name="people">People Search</string>
    <string name="or">OR</string>
    <string name="enter_convo">Enter a Conversation</string>

    //activity names generated by android studio
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_message">MessageActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_select_user">SelectUserActivity</string>
    <string name="title_activity_forgot_account">ForgotAccountActivity</string>
    <string name="title_activity_select_chat">SelectChatActivity</string>
</resources>
