<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/light_orange"
    tools:context="com.garbergames.messageme.activityClasses.UserActivity">

    <TextView
        android:textSize="35sp"
        android:textColor="@color/light_white"
        android:layout_gravity="center"
        android:text="@string/people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edittext_email"
        android:textColorHint="@color/dark_white"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/or"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edittext_name"
        android:textColorHint="@color/dark_white"
        android:textColor="@color/dark_white"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/or"
        android:gravity="center"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edittext_username"
        android:textColorHint="@color/dark_white"
        android:textColor="@color/dark_white"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/activity_vertical_margin" />

   <Button
       android:id="@+id/button_find"
       android:textSize="25sp"
       android:textColor="@color/light_white"
       android:background="@color/dark_orange"
       android:layout_gravity="center"
       android:text="@string/search"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

</LinearLayout>
