<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/light_purple"
    tools:context=".MainActivity">

    <TextView
        android:textColor="@color/light_white"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edittext_username"
        android:textColorHint="@color/dark_white"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edittext_password"
        android:textColorHint="@color/dark_white"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="3">

        <Button
            android:id="@+id/button_login"
            android:layout_weight="1"
            android:background="@color/dark_purple"
            android:textColor="@color/light_white"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_weight="1"
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/button_create_account"
            android:layout_weight="1"
            android:textColor="@color/light_white"
            android:background="@color/dark_purple"
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <Space
            android:layout_width="@dimen/activity_vertical_margin"
            android:layout_height="@dimen/activity_horizontal_margin" />

    <TextView
        android:text="@string/forgot"
        android:textColor="@color/dark_white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_forgot"
        android:background="@color/dark_purple"
        android:textColor="@color/light_white"
        android:text="@string/retrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
